package app.daos;

public class GenericDAO{


}
