package app.dto;

public record GenreDTO(String name) {
}
